rename merge icon to fork, create new merge icon

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 <svg>
                     <use xlink:href="dist/symbols.svg#i-stackoverflow" />
                 </svg>
+                <svg>
+                    <use xlink:href="dist/symbols.svg#i-fork" />
+                </svg>
             </div>
         </div>
     </div>
