add fullscreen icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="text-center">danopz/icons</h1>
 
-    <div class="row">
+    <div class="row no-gutters">
         <div class="col offset-sm-1 col-sm-10 offset-lg-2 col-lg-8">
             <hr />
 
@@ -65,13 +65,16 @@
 
             <div class="icons">
                 <svg>
+                    <use xlink:href="dist/symbols.svg#i-fullscreen" />
+                </svg>
+                <svg>
                     <use xlink:href="dist/symbols.svg#i-merge" />
                 </svg>
                 <svg>
-                    <use xlink:href="dist/symbols.svg#i-stackoverflow" />
+                    <use xlink:href="dist/symbols.svg#i-fork" />
                 </svg>
                 <svg>
-                    <use xlink:href="dist/symbols.svg#i-fork" />
+                    <use xlink:href="dist/symbols.svg#i-stackoverflow" />
                 </svg>
             </div>
         </div>
