add github corner to gh page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
     <h1 class="text-center">danopz/icons</h1>
 
+    <a href="https://github.com/danopz/icons" class="github-corner">
+        <img src="https://cdn.rawgit.com/danopz/github-corner/0.1.0/dist/corner.svg" />
+    </a>
+
     <div class="row no-gutters">
         <div class="col offset-sm-1 col-sm-10 offset-lg-2 col-lg-8">
             <hr />
