add instagram, facebook and youtube icons

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
                 <svg>
                     <use xlink:href="dist/symbols.svg#i-stackoverflow" />
                 </svg>
+                <svg>
+                    <use xlink:href="dist/symbols.svg#i-instagram" />
+                </svg>
+                <svg>
+                    <use xlink:href="dist/symbols.svg#i-facebook" />
+                </svg>
+                <svg>
+                    <use xlink:href="dist/symbols.svg#i-youtube" />
+                </svg>
             </div>
         </div>
     </div>
