add color input to gh-page

--- a/index.html
+++ b/index.html
@@ -58,9 +58,19 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="size">size</label>
-                        <input type="number" id="size" min="32" max="320" value="64" step="1" class="form-control"/>
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="size">size</label>
+                                <input type="number" id="size" min="32" max="320" value="64" step="1" class="form-control"/>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="color">color</label>
+                                <input type="color" id="color" value="#000000" class="form-control"/>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
