--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                 <svg>
                     <use xlink:href="dist/symbols.svg#i-youtube" />
                 </svg>
+                <svg>
+                    <use xlink:href="dist/symbols.svg#i-xing" />
+                </svg>
             </div>
         </div>
     </div>
