add thumbs up and down

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                     <use xlink:href="dist/symbols.svg#i-rss" />
                 </svg>
                 <svg>
+                    <use xlink:href="dist/symbols.svg#i-thumbs-down" />
+                </svg>
+                <svg>
+                    <use xlink:href="dist/symbols.svg#i-thumbs-up" />
+                </svg>
+                <svg>
                     <use xlink:href="dist/symbols.svg#i-stackoverflow" />
                 </svg>
                 <svg>
