add commit icon

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                     <use xlink:href="dist/symbols.svg#i-fork" />
                 </svg>
                 <svg>
+                    <use xlink:href="dist/symbols.svg#i-commit" />
+                </svg>
+                <svg>
                     <use xlink:href="dist/symbols.svg#i-rss" />
                 </svg>
                 <svg>
