add icon names to gh-page ref #2

--- a/index.html
+++ b/index.html
@@ -77,43 +77,91 @@
 
             <hr />
 
-            <div class="icons">
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-fullscreen" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-merge" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-fork" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-commit" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-rss" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-thumbs-down" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-thumbs-up" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-stackoverflow" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-instagram" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-facebook" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-youtube" />
-                </svg>
-                <svg>
-                    <use xlink:href="dist/symbols.svg#i-xing" />
-                </svg>
+            <div class="d-flex align-content-start flex-wrap text-center">
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-fullscreen" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-fullscreen</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-merge" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-merge</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-fork" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-fork</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-commit" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-commit</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-rss" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-rss</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-thumbs-down" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-thumbs-down</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-thumbs-up" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-thumbs-up</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-stackoverflow" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-stackoverflow</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-instagram" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-instagram</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-facebook" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-facebook</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-youtube" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-youtube</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-xing" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-xing</small>
+                </div>
             </div>
         </div>
     </div>
