--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
                 </div>
                 <div class="m-2">
                     <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-badge" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-badge</small>
+                </div>
+                <div class="m-2">
+                    <svg class="icon">
                         <use xlink:href="dist/symbols.svg#i-stackoverflow" />
                     </svg>
                     <br />
