add mastodon icon

--- a/index.html
+++ b/index.html
@@ -169,6 +169,13 @@
                     <br />
                     <small class="text-muted">i-xing</small>
                 </div>
+                <div class="m-2">
+                    <svg class="icon">
+                        <use xlink:href="dist/symbols.svg#i-mastodon" />
+                    </svg>
+                    <br />
+                    <small class="text-muted">i-mastodon</small>
+                </div>
             </div>
         </div>
     </div>
